// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: DocHeading correctly formats title 1`] = `
<DocHeading
  locationFromJestTest={
    Object {
      "pathname": "test-test",
    }
  }
>
  <h1>
    Test test
  </h1>
</DocHeading>
`;

exports[`Utilities: DocHeading renders heading and updates document title 1`] = `
<DocHeading
  locationFromJestTest={
    Object {
      "pathname": "test",
    }
  }
>
  <h1>
    Test
  </h1>
</DocHeading>
`;
